# ecoflow-api-mqtt

./: .cursorrules  .gitignore  .pre-commit-config.yaml  BUGFIX_interval_logic.md  CHANGELOG.md  CLAUDE.md  LICENSE  LOGGING_EXAMPLE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_beta10.md  RELEASE_NOTES_beta6.md  RELEASE_NOTES_beta8.md  RELEASE_NOTES_v1.4.0-beta2.md  RELEASE_NOTES_v1.4.0-beta3.md  RELEASE_NOTES_v1.4.0-beta5.md  RELEASE_NOTES_v1.4.1.md  RELEASE_v1.4.0-beta5_README.md  check_structure.py  codex-issue-agent-output.md  hacs.json  issue-agent-comment.md  make_zip.py  pyproject.toml  release-notes-v1.5.0-beta.1.md  release-notes-v1.5.0.md  requirements-lint.txt  requirements-test.txt  smart_plug_api_response_HW52ZDH4SF6M1296.json  smart_plug_api_response_MR51ZES5PG860274.json
.claude/: settings.local.json
.github/: ISSUE_AGENT.md
.github/codex/prompts/: issue-agent.md
.github/workflows/: codex-issue-agent.yml
automations/: ecoflow_battery_alerts.yaml  ecoflow_power_switch.yaml  ecoflow_smart_charging.yaml
custom_components/ecoflow_api/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  data_holder.py  diagnostics.py  entity.py  hassio-ecoflow-api.code-workspace  hybrid_coordinator.py  manifest.json  migrations.py  mqtt_client.py  number.py  recorder.py  river3plus_coordinator.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/ecoflow_api/commands/: __init__.py  base.py  delta_v2.py  pro_v1.py  pro_v2.py  smart_plug.py
custom_components/ecoflow_api/devices/: __init__.py  base.py
custom_components/ecoflow_api/devices/delta_2/: __init__.py  binary_sensors.py  numbers.py  selects.py  sensors.py  switches.py
custom_components/ecoflow_api/devices/delta_pro/: __init__.py  binary_sensors.py  numbers.py  selects.py  sensors.py  switches.py
custom_components/ecoflow_api/devices/delta_pro_3/: __init__.py  binary_sensors.py  buttons.py  const.py  numbers.py  selects.py  sensors.py  switches.py
custom_components/ecoflow_api/devices/delta_pro_ultra/: __init__.py  const.py
custom_components/ecoflow_api/devices/river3plus/: __init__.py  const.py  device.py  proto_decoder.py
custom_components/ecoflow_api/devices/smart_plug/: __init__.py  const.py  numbers.py  (+2 more)
custom_components/ecoflow_api/translations/: en.json  uk.json
docs/superpowers/specs/: 2026-07-03-github-issue-agent-design.md
scripts/: issue-agent-context.ps1
tests/: README.md  __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_bkw_main_sn_routing.py  test_commands.py  test_devices.py  test_number.py  test_river3plus_decoder.py  test_select.py  test_sensor.py  test_stream_base_load_mapping.py  test_stream_microinverter_mappings.py  test_switch.py
(+7 files in other folders)
